# django-core-kit

./: .gitignore  README.md  manage.py  pyproject.toml
BaseProject/apps/admin_portal/: apps.py  models.py  policy.py  urls.py  views.py
BaseProject/apps/admin_portal/management/commands/: generate_invoices.py
BaseProject/apps/admin_portal/templates/admin_portal/tables/: example.html
BaseProject/apps/core_user/: apps.py  models.py
BaseProject/core/: asgi.py  base_policy.py  permissions.py  settings.py  urls.py  wsgi.py
BaseProject/core/utilities/: data.py  models.py
BaseProject/settings/: dev.py  production.py
